[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "ft_package"
version = "0.0.1"
authors = [
  { name = "Bachir Ammar", email = "bammar@student.42abudhabi.ae" },
]
description = "A sample test package"
readme = "README.md"
requires-python = ">=3.10"

license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/basheer421/python-42"
Issues = "https://github.com/basheer421/python-42/issues"

[tool.hatch.build.targets.wheel]
packages = ["ex09"]
